--- a/core/templates/core/child_list.html
+++ b/core/templates/core/child_list.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Children</h1>
+    <h1>{% trans "Children" %}</h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
         <table class="table table-striped table-hover child-list">
