--- a/core/templates/core/tummytime_list.html
+++ b/core/templates/core/tummytime_list.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Tummy Time</h1>
+    <h1>{% trans "Tummy Time" %}</h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
         <table class="table table-striped table-hover">
