--- a/core/templates/core/weight_list.html
+++ b/core/templates/core/weight_list.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Weight</h1>
+    <h1>{% trans "Weight" %}</h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
         <table class="table table-striped table-hover">
