--- a/babybuddy/templates/babybuddy/user_settings_form.html
+++ b/babybuddy/templates/babybuddy/user_settings_form.html
@@ -42,21 +42,9 @@
                     {% endwith %}
                 </div>
                 <div class="form-group row">
-                    <label for="id_language" class="col-sm-2 col-form-label">
-                        {% trans "Language" %}
-                    </label>
-                    <div class="col-sm-10">
-                        <select name="language">
-                            {% get_current_language as LANGUAGE_CODE %}
-                            {% get_available_languages as LANGUAGES %}
-                            {% get_language_info_list for LANGUAGES as languages %}
-                            {% for language in languages %}
-                                <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
-                                    {{ language.name_local }} ({{ language.code }})
-                                </option>
-                            {% endfor %}
-                        </select>
-                    </div>
+                    {% with form_settings.language as field %}
+                        {% include 'babybuddy/form_field.html' %}
+                    {% endwith %}
                 </div>
             </fieldset>
             <fieldset>
