Add temperature tracking.

--- a/babybuddy/static_src/scss/icons.scss
+++ b/babybuddy/static_src/scss/icons.scss
@@ -96,6 +96,10 @@
     @extend .fa-stop;
 }
 
+.icon-temperature {
+    @extend .fa-thermometer-three-quarters;
+}
+
 .icon-timer {
     @extend .fa-clock-o;
 }
