--- a/reports/templates/reports/report_base.html
+++ b/reports/templates/reports/report_base.html
@@ -25,6 +25,5 @@
 
 {% block javascript %}
     <script src="{% static "babybuddy/js/graph.js" %}"></script>
-    {{ js_graph|safe }}
-    {{ js_listener|safe }}
+    {{ js|safe }}
 {% endblock %}
