Spelling corrections for 'not enough information to generate this report' message

--- a/reports/templates/reports/report_base.html
+++ b/reports/templates/reports/report_base.html
@@ -17,7 +17,7 @@
         {% else %}
             <div class="jumbotron text-center">
                 <i class="icon icon-sad" aria-hidden="true"></i>
-                {% trans "There is no enough data to generate this report." %}
+                {% trans "There is not enough data to generate this report." %}
                 <i class="icon icon-sad" aria-hidden="true"></i>
             </div>
         {% endif %}
