Use cookie for language setting
Django 4.0 will deprecate the use of session for language setting.

--- a/babybuddy/templates/babybuddy/user_settings_form.html
+++ b/babybuddy/templates/babybuddy/user_settings_form.html
@@ -65,6 +65,7 @@
                     </div>
                 </div>
             </fieldset>
+            <input type="hidden" name="next" value="{% url 'babybuddy:user-settings' %}" />
             <button type="submit" class="btn btn-primary">{% trans "Submit" %}</button>
         </form>
     </div>
