Add Spanish translations

--- a/reports/templates/reports/report_base.html
+++ b/reports/templates/reports/report_base.html
@@ -29,6 +29,9 @@
     {% language 'de' %}
         <script src="{% static "babybuddy/plotly-locales/plotly-locale-de.js" %}"></script>
     {% endlanguage %}
+    {% language 'es' %}
+        <script src="{% static "babybuddy/plotly-locales/plotly-locale-es.js" %}"></script>
+    {% endlanguage %}
     {% language 'fr' %}
         <script src="{% static "babybuddy/plotly-locales/plotly-locale-fr.js" %}"></script>
     {% endlanguage %}
