Add Turkish translations

--- a/reports/templates/reports/report_base.html
+++ b/reports/templates/reports/report_base.html
@@ -38,5 +38,8 @@
     {% language 'sv' %}
         <script src="{% static "babybuddy/plotly-locales/plotly-locale-sv.js" %}"></script>
     {% endlanguage %}
+    {% language 'tr' %}
+        <script src="{% static "babybuddy/plotly-locales/plotly-locale-tr.js" %}"></script>
+    {% endlanguage %}
     {{ js|safe }}
 {% endblock %}
