Remove hardcoded time formats in list views (#93)

--- a/core/templates/core/diaperchange_list.html
+++ b/core/templates/core/diaperchange_list.html
@@ -29,7 +29,7 @@
                         <td class="text-center">{{ change.wet|bool_icon }}</td>
                         <td class="text-center">{{ change.solid|bool_icon }}</td>
                         <td>{{ change.get_color_display }}</td>
-                        <td>{{ change.time|date:'n/j/y G:i' }}</td>
+                        <td>{{ change.time }}</td>
                         <td class="text-center">
                             <div class="btn-group btn-group-sm" role="group" aria-label="{% trans "Actions" %}">
 
