--- a/core/templates/core/feeding_list.html
+++ b/core/templates/core/feeding_list.html
@@ -36,7 +36,7 @@
                             {% endif %}
                         </td>
                         <td>{{ feeding.duration|duration_string }}</td>
-                        <td>{{ feeding.start|date:'n/j/y G:i' }}</td>
+                        <td>{{ feeding.start }}</td>
                         <td class="text-center">
                             <div class="btn-group btn-group-sm" role="group" aria-label="{% trans "Actions" %}">
 
