--- a/core/templates/core/timer_list.html
+++ b/core/templates/core/timer_list.html
@@ -26,9 +26,9 @@
             {% for timer in object_list %}
                 <tr>
                     <th scope="row"><a href="{% url 'core:timer-detail' timer.id %}">{{ timer }}</a></th>
-                    <td>{{ timer.start|date:'n/j/y G:i' }}</td>
+                    <td>{{ timer.start }}</td>
                     <td>{{ timer.duration|duration_string }}</td>
-                    <td>{{ timer.end|date:'n/j/y G:i' }}</td>
+                    <td>{{ timer.end }}</td>
                     <td>{{ timer.active|bool_icon }}</td>
                     <td>{{ timer.user }}</td>
                 </tr>
