--- a/reports/templates/reports/report_base.html
+++ b/reports/templates/reports/report_base.html
@@ -26,20 +26,8 @@
 
 {% block javascript %}
     <script src="{% static "babybuddy/js/graph.js" %}"></script>
-    {% language 'de' %}
-        <script src="{% static "babybuddy/plotly-locales/plotly-locale-de.js" %}"></script>
-    {% endlanguage %}
-    {% language 'es' %}
-        <script src="{% static "babybuddy/plotly-locales/plotly-locale-es.js" %}"></script>
-    {% endlanguage %}
-    {% language 'fr' %}
-        <script src="{% static "babybuddy/plotly-locales/plotly-locale-fr.js" %}"></script>
-    {% endlanguage %}
-    {% language 'sv' %}
-        <script src="{% static "babybuddy/plotly-locales/plotly-locale-sv.js" %}"></script>
-    {% endlanguage %}
-    {% language 'tr' %}
-        <script src="{% static "babybuddy/plotly-locales/plotly-locale-tr.js" %}"></script>
-    {% endlanguage %}
+    {% with get_current_language as language %}
+        <script>Plotly.setPlotConfig({locale: '{{ language }}'})</script>
+    {% endwith %}
     {{ js|safe }}
 {% endblock %}
