Add locale support for datetime picker

--- a/core/templates/core/child_form.html
+++ b/core/templates/core/child_form.html
@@ -32,8 +32,9 @@
     <script type="text/javascript">
         $(function () {
             $('#datetimepicker_birth_date').datetimepicker({
-                viewMode: 'years',
-                format: 'YYYY-MM-DD'
+                format: 'L',
+                locale: '{{ LOCALE }}',
+                viewMode: 'years'
             });
         });
     </script>
