--- a/core/templates/core/weight_form.html
+++ b/core/templates/core/weight_form.html
@@ -32,7 +32,8 @@
         $(function () {
             $('#datetimepicker_date').datetimepicker({
                 defaultDate: 'now',
-                format: 'YYYY-MM-DD'
+                format: 'L',
+                locale: '{{ LOCALE }}'
             });
         });
     </script>
