--- a/babybuddy/templates/babybuddy/base.html
+++ b/babybuddy/templates/babybuddy/base.html
@@ -1,4 +1,6 @@
-{% load i18n static %}
+{% load babybuddy_tags i18n static %}
+{% get_current_language as LANGUAGE_CODE %}
+{% get_current_locale as LOCALE %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -41,6 +43,7 @@
 
     <script src="{% static "babybuddy/js/vendor.js" %}"></script>
     <script src="{% static "babybuddy/js/app.js" %}"></script>
+    <script>moment.locale('{{ LOCALE }}');</script>
 
 {% block javascript %}{% endblock %}
 </body>
