--- a/core/templates/core/sleep_form.html
+++ b/core/templates/core/sleep_form.html
@@ -31,12 +31,14 @@
     <script type="text/javascript">
         $(function () {
             $('#datetimepicker_start').datetimepicker({
-                format: 'YYYY-MM-DD HH:mm',
+                format: 'L LT',
+                locale: '{{ LOCALE }}',
                 useCurrent: false
             });
             $('#datetimepicker_end').datetimepicker({
                 defaultDate: 'now',
-                format: 'YYYY-MM-DD HH:mm'
+                format: 'L LT',
+                locale: '{{ LOCALE }}'
             });
         });
     </script>
