--- a/core/templates/core/temperature_form.html
+++ b/core/templates/core/temperature_form.html
@@ -32,7 +32,8 @@
         $(function () {
             $('#datetimepicker_time').datetimepicker({
                 defaultDate: 'now',
-                format: 'YYYY-MM-DD HH:mm'
+                format: 'L LT',
+                locale: '{{ LOCALE }}'
             });
         });
     </script>
