Use `LOCALE` in Timer form

--- a/core/templates/core/timer_form.html
+++ b/core/templates/core/timer_form.html
@@ -28,7 +28,7 @@
             $('#datetimepicker_start').datetimepicker({
                 defaultDate: 'now',
                 format: 'L LTS',
-                locale: 'en'
+                locale: '{{ LOCALE }}'
             });
         });
     </script>
