--- a/babybuddy/templates/registration/password_reset_confirm.html
+++ b/babybuddy/templates/registration/password_reset_confirm.html
@@ -9,8 +9,12 @@
 
         {% if form.errors %}
             <div class="alert alert-danger">
-                {% blocktrans %}<p class="mb-0"><strong>Oh snap!</strong> The
-                two passwords did not match. Please try again.</p>{% endblocktrans %}
+                <p class="mb-0">
+                {% blocktrans trimmed %}
+                    <strong>Oh snap!</strong> The two passwords did not
+                    match. Please try again.
+                {% endblocktrans %}
+                </p>
             </div>
         {% endif %}
 
