--- a/babybuddy/templates/registration/password_reset_done.html
+++ b/babybuddy/templates/registration/password_reset_done.html
@@ -5,12 +5,18 @@
 {% block content %}
 
     <div class="text-center mb-0">
-        {% blocktrans %}<p>We've emailed you instructions for setting your
+        <p>
+        {% blocktrans trimmed %}We've emailed you instructions for setting your
             password, if an account exists with the email you entered. You
-            should receive them shortly.</p>
-        <p class="mb-0">If you don't receive an email, please make sure you've
-            entered the address you registered with, and check your spam
-            folder.</p>{% endblocktrans %}
+            should receive them shortly.
+        {% endblocktrans %}
+        </p>
+        <p class="mb-0">
+        {% blocktrans trimmed %}
+            If you don't receive an email, please make sure you've entered the
+            address you registered with, and check your spam folder.
+        {% endblocktrans %}
+        </p>
     </div>
 
 {% endblock %}
