--- a/babybuddy/templates/registration/password_reset_form.html
+++ b/babybuddy/templates/registration/password_reset_form.html
@@ -5,9 +5,13 @@
 {% block content %}
 
     <div class="text-center mb-4">
-        {% blocktrans %}<p class="mb-0">Enter your account email address in the
-        form below. If the address is valid, you will receive instructions for
-        resetting your password.</p>{% endblocktrans %}
+        <p class="mb-0">
+        {% blocktrans trimmed %}
+            Enter your account email address in the form below. If the address
+            is valid, you will receive instructions for resetting your
+            password.
+        {% endblocktrans %}
+        </p>
     </div>
 
     <form method="post">
