--- a/core/templates/core/sleep_form.html
+++ b/core/templates/core/sleep_form.html
@@ -20,7 +20,9 @@
 
 {% block content %}
     {% if object %}
-        {% blocktrans %}<h1>Update <span class="text-info">{{ object }}</span></h1>{% endblocktrans %}
+        {% blocktrans trimmed %}
+            <h1>Update <span class="text-info">{{ object }}</span></h1>
+        {% endblocktrans %}
     {% else %}
         <h1>{% trans "Add a Sleep Entry" %}</h1>
     {% endif %}
