--- a/core/templates/core/timer_confirm_delete.html
+++ b/core/templates/core/timer_confirm_delete.html
@@ -1,7 +1,9 @@
 {% extends 'babybuddy/page.html' %}
 {% load i18n widget_tweaks %}
 
-{% block title %}{% blocktrans %}Delete {{ object }}{% endblocktrans %}{% endblock %}
+{% block title %}
+    {% blocktrans %}Delete {{ object }}{% endblocktrans %}
+{% endblock %}
 
 {% block breadcrumbs %}
     <li class="breadcrumb-item"><a href="{% url 'core:timer-list' %}">{% trans "Timers" %}</a></li>
@@ -12,7 +14,9 @@
 {% block content %}
     <form role="form" method="post">
         {% csrf_token %}
-        {% blocktrans %}<h1>Are you sure you want to delete <span class="text-info">{{ object }}</span>?</h1>{% endblocktrans %}
+        {% blocktrans trimmed %}
+            <h1>Are you sure you want to delete <span class="text-info">{{ object }}</span>?</h1>
+        {% endblocktrans %}
         <input type="submit" value="{% trans "Delete" %}" class="btn btn-danger" />
         <a href="/" class="btn btn-default">{% trans "Cancel" %}</a>
     </form>
