--- a/dashboard/templates/cards/diaperchange_last.html
+++ b/dashboard/templates/cards/diaperchange_last.html
@@ -5,7 +5,9 @@
 
 {% block title %}
     {% if change %}
-        {% blocktrans with time=change.time|timesince %}{{ time }} ago{% endblocktrans %}
+        {% blocktrans trimmed with time=change.time|timesince %}
+            {{ time }} ago
+        {% endblocktrans %}
     {% else %}
         {% trans "Never" %}
     {% endif %}
