--- a/core/templates/core/timer_form.html
+++ b/core/templates/core/timer_form.html
@@ -15,7 +15,9 @@
 
 {% block content %}
     {% if object %}
-        {% blocktrans %}<h1>Update <span class="text-info">{{ object }}</span></h1>{% endblocktrans %}
+        {% blocktrans trimmed %}
+            <h1>Update <span class="text-info">{{ object }}</span></h1>
+        {% endblocktrans %}
     {% else %}
         <h1>{% trans "Start Timer" %}</h1>
     {% endif %}
