--- a/dashboard/templates/cards/feeding_last.html
+++ b/dashboard/templates/cards/feeding_last.html
@@ -5,7 +5,9 @@
 
 {% block title %}
     {% if feeding %}
-        {% blocktrans with time=feeding.start|timesince %}{{ time }} ago{% endblocktrans %}
+        {% blocktrans trimmed with time=feeding.start|timesince %}
+            {{ time }} ago
+        {% endblocktrans %}
     {% else %}
         {% trans "Never" %}
     {% endif %}
