--- a/dashboard/templates/cards/timer_list.html
+++ b/dashboard/templates/cards/timer_list.html
@@ -5,7 +5,9 @@
 
 {% block title %}
     {% with instances|length as count %}
-        {% blocktrans with plural=count|pluralize %}{{ count }} active timer{{ plural }}{% endblocktrans %}
+        {% blocktrans trimmed with plural=count|pluralize %}
+            {{ count }} active timer{{ plural }}
+        {% endblocktrans %}
     {% endwith %}
 {% endblock %}
 
@@ -16,7 +18,9 @@
            class="list-group-item list-group-item-action">
             <strong>{{ instance }}</strong>
             <p class="text-muted small m-0">
-                {% blocktrans with start=instance.start|time user=instance.user %}Started by {{ user }} at {{ start }}{% endblocktrans %}
+                {% blocktrans trimmed with start=instance.start|time user=instance.user %}
+                    Started by {{ user }} at {{ start }}
+                {% endblocktrans %}
             </p>
         </a>
     {% endfor %}
