Add YYYY-MM-DD support to frontend library

--- a/core/templates/core/child_form.html
+++ b/core/templates/core/child_form.html
@@ -36,7 +36,8 @@
             $('#datetimepicker_birth_date').datetimepicker({
                 format: 'L',
                 locale: '{{ LOCALE }}',
-                viewMode: 'years'
+                viewMode: 'years',
+                extraFormats: ['YYYY-MM-DD']
             });
         });
     </script>
