--- a/babybuddy/static_src/scss/babybuddy.scss
+++ b/babybuddy/static_src/scss/babybuddy.scss
@@ -3,5 +3,6 @@
 @import 'mixins';
 @import 'global';
 @import '../../../node_modules/bootstrap/scss/bootstrap';
+@import '../../../node_modules/tempusdominus-bootstrap-4/src/sass/tempusdominus-bootstrap-4';
 
 @import '../../../**/static_src/scss/*';
