--- a/babybuddy/static_src/scss/themes/blueorange.scss
+++ b/babybuddy/static_src/scss/themes/blueorange.scss
@@ -148,3 +148,8 @@ $list-group-action-hover-color: $list-group-action-color;
 
 $breadcrumb-bg:                     none;
 $breadcrumb-active-color:           $gray-600;
+
+
+// Datetimepicker library (Tempus Dominus)
+
+$bs-datetimepicker-btn-hover-bg: $gray-800;
