--- a/core/templates/core/diaperchange_form.html
+++ b/core/templates/core/diaperchange_form.html
@@ -31,12 +31,6 @@
 
 {% block javascript %}
     <script type="text/javascript">
-        $(function () {
-            $('#datetimepicker_time').datetimepicker({
-                defaultDate: 'now',
-                format: 'L LT',
-                locale: '{{ LOCALE }}'
-            });
-        });
+        BabyBuddy.DatetimePicker.init($('#datetimepicker_time'));
     </script>
 {% endblock %}
