--- a/core/templates/core/timer_form.html
+++ b/core/templates/core/timer_form.html
@@ -26,12 +26,8 @@
 
 {% block javascript %}
     <script type="text/javascript">
-        $(function () {
-            $('#datetimepicker_start').datetimepicker({
-                defaultDate: 'now',
-                format: 'L LTS',
-                locale: '{{ LOCALE }}'
-            });
+        BabyBuddy.DatetimePicker.init($('#datetimepicker_time'), {
+            format: 'L LTS'
         });
     </script>
 {% endblock %}
