--- a/core/templates/core/timer_form.html
+++ b/core/templates/core/timer_form.html
@@ -26,7 +26,7 @@
 
 {% block javascript %}
     <script type="text/javascript">
-        BabyBuddy.DatetimePicker.init($('#datetimepicker_time'), {
+        BabyBuddy.DatetimePicker.init($('#datetimepicker_start'), {
             format: 'L LTS'
         });
     </script>
