Apply custom style to `.datetimepicker-input`

--- a/babybuddy/static_src/scss/global.scss
+++ b/babybuddy/static_src/scss/global.scss
@@ -34,3 +34,10 @@
 .bootstrap-datetimepicker-widget {
     color: $gray-400;
 }
+
+.datetimepicker-input[readonly] {
+    background: none;
+    border: 0;
+    color: $white;
+    font-weight: bold;
+}
