--- a/babybuddy/templates/babybuddy/form_field.html
+++ b/babybuddy/templates/babybuddy/form_field.html
@@ -18,16 +18,16 @@
             </label>
         </div>
     {% elif field|field_type == "datetimefield" or field|field_type == "datefield" %}
-            <div class="input-group date" id="datetimepicker_{{ field.name }}" data-target-input="nearest">
-                <div class="input-group-prepend" data-target="#datetimepicker_{{ field.name }}" data-toggle="datetimepicker">
-                    <span class="input-group-text"><i class="fa fa-calendar"></i></span>
-                </div>
-                {% if field.errors %}
-                    {{ field|add_class:"form-control is-invalid" }}
-                {% else %}
-                    {{ field|add_class:"form-control" }}
-                {% endif %}
+        <div class="input-group" id="datetimepicker_{{ field.name }}" data-target-input="nearest">
+            <div class="input-group-prepend" data-target="#datetimepicker_{{ field.name }}" data-toggle="datetimepicker">
+                <span class="input-group-text"><i class="fa fa-calendar"></i></span>
             </div>
+            {% if field.errors %}
+                {{ field|add_class:"datetimepicker-input form-control is-invalid" }}
+            {% else %}
+                {{ field|add_class:"datetimepicker-input form-control" }}
+            {% endif %}
+        </div>
     {% elif 'choice' in field|field_type %}
         {% if field.errors %}
             {{ field|add_class:"custom-select is-invalid" }}
