--- a/babybuddy/templates/babybuddy/form_field.html
+++ b/babybuddy/templates/babybuddy/form_field.html
@@ -18,14 +18,14 @@
             </label>
         </div>
     {% elif field|field_type == "datetimefield" or field|field_type == "datefield" %}
-        <div class="input-group" id="datetimepicker_{{ field.name }}" data-target-input="nearest">
+        <div class="input-group input-group-lg date" id="datetimepicker_{{ field.name }}" data-target-input="nearest">
             <div class="input-group-prepend" data-target="#datetimepicker_{{ field.name }}" data-toggle="datetimepicker">
                 <span class="input-group-text"><i class="fa fa-calendar"></i></span>
             </div>
             {% if field.errors %}
-                {{ field|add_class:"datetimepicker-input form-control is-invalid" }}
+                {{ field|add_class:"datetimepicker-input form-control form-control-lg is-invalid" }}
             {% else %}
-                {{ field|add_class:"datetimepicker-input form-control" }}
+                {{ field|add_class:"datetimepicker-input form-control form-control-lg" }}
             {% endif %}
         </div>
     {% elif 'choice' in field|field_type %}
